Home pagina invullen

--- a/Homepagina.html
+++ b/Homepagina.html
@@ -48,6 +48,18 @@
           </div>
         </div>
       </nav>
+      <div>
+        <h3>Waar ben ik geweest en wat heb ik gedaan</h3>
+        <p>In mijn vakantie heb ik vooral thuis gebleven dankzij Corona.</p>
+        <p>
+          Ik heb thuis vooral gegamed maar ook gestudeerd omdat ik na de
+          vakantie een vakantie toets van software had.
+        </p>
+        <p>
+          De games dat ik vooral gespeeld heb waren Roblox, Fortnite en
+          Minecraft
+        </p>
+      </div>
     </div>
   </body>
 </html>
