--- a/Homepagina.html
+++ b/Homepagina.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div class="container clearfix">
+    <div class="container">
       <nav
         class="navbar text-center fixed-top navbar-expand-sm navbar-dark bg-dark"
         id="navbarNav"
@@ -48,7 +48,7 @@
           </div>
         </div>
       </nav>
-      <div>
+      <div class="container">
         <h3>Waar ben ik geweest en wat heb ik gedaan</h3>
         <p>In mijn vakantie heb ik vooral thuis gebleven dankzij Corona.</p>
         <p>
@@ -61,5 +61,20 @@
         </p>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
