Proberen te zorgen dat mijn div niet aan mijn nav plakt

--- a/Homepagina.html
+++ b/Homepagina.html
@@ -48,18 +48,21 @@
           </div>
         </div>
       </nav>
-      <div class="container">
-        <h3>Waar ben ik geweest en wat heb ik gedaan</h3>
-        <p>In mijn vakantie heb ik vooral thuis gebleven dankzij Corona.</p>
-        <p>
-          Ik heb thuis vooral gegamed maar ook gestudeerd omdat ik na de
-          vakantie een vakantie toets van software had.
-        </p>
-        <p>
-          De games dat ik vooral gespeeld heb waren Roblox, Fortnite en
-          Minecraft
-        </p>
-      </div>
+
+      <article>
+        <div class="container p-5">
+          <h3>Waar ben ik geweest en wat heb ik gedaan</h3>
+          <p>In mijn vakantie heb ik vooral thuis gebleven dankzij Corona.</p>
+          <p>
+            Ik heb thuis vooral gegamed maar ook gestudeerd omdat ik na de
+            vakantie een vakantie toets van software had.
+          </p>
+          <p>
+            De games dat ik vooral gespeeld heb waren Roblox, Fortnite en
+            Minecraft
+          </p>
+        </div>
+      </article>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
