--- a/Commentaar.html
+++ b/Commentaar.html
@@ -6,5 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav
+        class="navbar text-center fixed-top navbar-expand-sm navbar-dark bg-dark"
+        id="navbarNav"
+      >
+        <div class="container text-center" style="margin-left: 15%">
+          <a class="navbar-brand" style="color: white">Logo</a>
+          <button
+            class="navbar-toggler"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Ervaringen.html">Ervaringen</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Commentaar.html">Commentaar</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+  </body>
 </html>
