--- a/Homepagina.html
+++ b/Homepagina.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="Homepagina.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Ervaringen.html">Ervaringen</a>
