--- a/Homepagina.html
+++ b/Homepagina.html
@@ -50,7 +50,7 @@
       </nav>
 
       <article>
-        <div class="container p-5">
+        <div class="container">
           <h3>Waar ben ik geweest en wat heb ik gedaan</h3>
           <p>In mijn vakantie heb ik vooral thuis gebleven dankzij Corona.</p>
           <p>
