Gezorgd dat men div niet meer aan men nav plakt

--- a/Homepagina.html
+++ b/Homepagina.html
@@ -50,7 +50,7 @@
       </nav>
 
       <article>
-        <div class="container">
+        <div class="container m-5 p-5">
           <h3>Waar ben ik geweest en wat heb ik gedaan</h3>
           <p>In mijn vakantie heb ik vooral thuis gebleven dankzij Corona.</p>
           <p>
