img van Minecraft veranderen

--- a/Homepagina.html
+++ b/Homepagina.html
@@ -71,9 +71,8 @@
             width="35%"
           />
           <img
-            src="/files/2019/04/minecraft-b-320x213.jpg"
+            src="/etc.clientlibs/minecraft/clientlibs/main/resources/img/header/logo.png"
             alt="Minecraft"
-            width="30%"
           />
         </div>
       </article>
