De afbeelding van minecraft aanpassen en een afbeelding voor te studeren erbij te zetten

--- a/Homepagina.html
+++ b/Homepagina.html
@@ -71,8 +71,13 @@
             width="35%"
           />
           <img
-            src="/etc.clientlibs/minecraft/clientlibs/main/resources/img/header/logo.png"
+            src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/header/logo.png"
             alt="Minecraft"
+            width="30%"
+          />
+          <img
+            src="https://www.proud2bme.nl/fgw.php?action=media&id=149936"
+            alt="studeren"
           />
         </div>
       </article>
