--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -48,5 +48,15 @@
           </div>
         </div>
       </nav>
+      <article>
+        <div class="container m-5 p-5">
+          <h1>Ervaringen</h1>
+          <h2 style="color: blue">Gamen</h2>
+          <h3 style="color: red">Roblox</h3>
+          <p>Mijn ervaringen met het spelen van Roblox zijn eigenlijk niet zo veel, want ik heb het niet vaak gespeeld alleen af en toe.</p>
+          <h3 style="color: red">Fortnite</h3>
+          <p>Mijn ervaringen met het spelen van Fortnite zijn zeer veel, omdat ik het vaak gespeeld heb in de vakantie. Ik heb vooral Chapter 2 Season 3 gespeeld en het thema van dat Season was dat de map was overstroomt </p>
+        </div>
+      </article>
   </body>
 </html>
