--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -55,7 +55,9 @@
           <h3 style="color: red">Roblox</h3>
           <p>Mijn ervaringen met het spelen van Roblox zijn eigenlijk niet zo veel, want ik heb het niet vaak gespeeld alleen af en toe.</p>
           <h3 style="color: red">Fortnite</h3>
-          <p>Mijn ervaringen met het spelen van Fortnite zijn zeer veel, omdat ik het vaak gespeeld heb in de vakantie. Ik heb vooral Chapter 2 Season 3 gespeeld en het thema van dat Season was dat de map was overstroomt </p>
+          <p>Mijn ervaringen met het spelen van Fortnite zijn zeer veel, omdat ik het vaak gespeeld heb in de vakantie. Ik heb vooral Chapter 2 Season 3 gespeeld en het thema van dat Season was dat de map was overstroomt maar ik vond het wel erg dat ze haaien hebben toegevoegd dit Season. Maar toen dat Chapter 2 Season 4 uitkwam was ik echt superblij want het thema was Marvel en ik ben een grote fan van Marvel.</p>
+          <h3 style="color: red">Minecraft</h3>
+          <p>Ik heb in de vakantie vooral Minecraft gespeeld. In men eigen survival wereld en ook op de CubeCraft en Hypixel servers, dat zijn servers waar je minigames kunt spelen. Ik heb vooral Minecraft gespeeld met men vrienden Robin en Jens.</p>
         </div>
       </article>
   </body>
