The Final Touch aan de ervaring pagina

--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -58,6 +58,8 @@
           <p>Mijn ervaringen met het spelen van Fortnite zijn zeer veel, omdat ik het vaak gespeeld heb in de vakantie. Ik heb vooral Chapter 2 Season 3 gespeeld en het thema van dat Season was dat de map was overstroomt maar ik vond het wel erg dat ze haaien hebben toegevoegd dit Season. Maar toen dat Chapter 2 Season 4 uitkwam was ik echt superblij want het thema was Marvel en ik ben een grote fan van Marvel.</p>
           <h3 style="color: red">Minecraft</h3>
           <p>Ik heb in de vakantie vooral Minecraft gespeeld. In men eigen survival wereld en ook op de CubeCraft en Hypixel servers, dat zijn servers waar je minigames kunt spelen. Ik heb vooral Minecraft gespeeld met men vrienden Robin en Jens.</p>
+          <h3 style="color: red">Studeren thuis</h3>
+          <p>Ik heb natuurlijk niet de hele vakantie gegamed. Ik heb ook veel gestudeerd voor men toets dat ik had op 4 september over Java.</p>
         </div>
       </article>
   </body>
