De pagina ervaringen afgemaakt

--- a/Commentaar.html
+++ b/Commentaar.html
@@ -46,7 +46,45 @@
               </li>
             </ul>
           </div>
-        </div>
       </nav>
+      <div id="accordion" class="container m-5 p-5">
+        <div class="card">
+          <div class="card-header">
+            <h5>
+              <a
+                href="#collapse1"
+                data-parent="#accordion"
+                data-toggle="collapse"
+              >
+                Delia Vervaeke
+              </a>
+            </h5>
+          </div>
+          <div id="collapse1" class="collapse show">
+            <div class="card-body">
+              
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <h5>
+              <a
+                href="#collapse2"
+                data-parent="#accordion"
+                data-toggle="collapse"
+              >
+                Jelle Vercruysse
+              </a>
+            </h5>
+          </div>
+
+          <div id="collapse2" class="collapse show">
+            <div class="card-body">
+              
+            </div>
+          </div>
+        </div>
+    </div>
   </body>
 </html>
