--- a/Commentaar.html
+++ b/Commentaar.html
@@ -81,7 +81,7 @@
 
           <div id="collapse2" class="collapse show">
             <div class="card-body">
-              
+              <p>Sorry, maar ik heb een pesthekel aan Fortnite. Voor de rest wel een toffe vakantie!</p>
             </div>
           </div>
         </div>
