--- a/Commentaar.html
+++ b/Commentaar.html
@@ -81,7 +81,7 @@
 
           <div id="collapse2" class="collapse show">
             <div class="card-body">
-              <p>Sorry, maar ik heb een pesthekel aan Fortnite. Voor de rest wel een toffe vakantie!</p>
+              <p>Sorry, maar ik heb een pesthekel aan Fortnite. Voor de rest wel een toffe vakantie! <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem eaque ad quaerat earum explicabo consequatur eligendi consequuntur voluptatum maiores, repudiandae iure, porro molestias dicta, totam beatae reiciendis neque minima aut nobis ipsa molestiae deserunt consectetur ut alias. Itaque, porro quia. Ducimus earum quod veniam. Laboriosam repellendus officiis omnis odit iure.</p>
             </div>
           </div>
         </div>
