--- a/Commentaar.html
+++ b/Commentaar.html
@@ -62,7 +62,7 @@
           </div>
           <div id="collapse1" class="collapse show">
             <div class="card-body">
-              <p>Fortnite suckt en roblox is stom. Minecraft is nog leuk. Toffe vakantie.</p>
+              <p>Fortnite suckt en roblox is stom. Minecraft is nog leuk. Toffe vakantie. Help</p>
             </div>
           </div>
         </div>
